--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss": "^8",
     "prisma": "^6.5.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.1.0"
   }
 }
