--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"],
-  "target": "es2015"
-
+  "exclude": ["node_modules"]
 }
