--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "npx wrangler pages deploy .next"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@cloudflare/next-on-pages": "^1.13.10",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -41,9 +39,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
-    "prisma": "^6.5.0",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "wrangler": "^4.1.0"
+    "typescript": "^5"
   }
 }
